======================================================================================================================

NEXT
====
AllOverIt
  * BREAKING: Moved ReflectionHelper methods SetMemberValue(), GetMemberValue(), and GetMemberType() to
    MemberInfoExtensions as extension methods.
  * Added PropertyNavigator to get expression details for all nodes in a property chain.
  * Added extension on ObjectPropertyEnumerableOptions called SetAutoCollatedPaths() which takes property node
    information via a PropertyNavigator to build full property paths and assert all leaf nodes are not a class type.


AllOverIt.GenericHost
  * Added WaitForStartup() to BackgroundWorker


10 Feb 2022
======================================================================================================================
AllOverIt v2.10.0
  * Added support to provide filter instances to ObjectPropertyFilterRegistry.


10 Feb 2022
======================================================================================================================
AllOverIt v2.9.1
  * Updated ObjectPropertySerializer to correctly handle primitive arrays. Can also now use the combined
    AutoCollationPaths on the global and filter specific options.


10 Feb 2022
======================================================================================================================
AllOverIt v2.9.0
  * Added support for AutoCollatedPaths when using the ObjectPropertySerializer.

AllOverIt.Validation v2.5.0
  * Updated to AllOverIt v2.9.0

AllOverIt.Aws.Cdk.AppSync v1.7.0
  * Updated to AllOverIt v2.9.0
  * Upated to Amazon.CDK.AWS.AppSync v1.144.0

AllOverIt.Evaluator v4.6.0
  * Updated to AllOverIt v2.9.0

AllOverIt.GenericHost v3.3.0
  * Updated to AllOverIt v2.9.0
  * Updated to Microsoft.Extensions.Hosting v6.0.1 for net6.0

AllOverIt.Serialization.NewtonsoftJson v1.8.0
  * Updated to AllOverIt v2.9.0

AllOverIt.Serialization.SystemTextJson v1.8.0
  * Updated to AllOverIt v2.9.0
