@@ -1,5 +1,5 @@
 ﻿using AllOverIt.Aws.Cdk.AppSync.Mapping;
-using AllOverIt.Extensions;
+using AllOverIt.Formatters.Strings.Extensions;
 
 namespace GraphqlSchema.Schema.Mappings
 {
