@@ -1,6 +1,6 @@
 ﻿using AllOverIt.Assertion;
 using AllOverIt.Aws.Cdk.AppSync.Mapping;
-using AllOverIt.Extensions;
+using AllOverIt.Formatters.Strings.Extensions;
 
 namespace AllOverIt.Aws.Cdk.AppSync.Attributes.DataSources
 {
